--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.5.32"
+    "phpunit/phpunit": "^10.5.32",
+    "php-mock/php-mock": "^2.5"
   }
 }
